Utilizzo del Servers

--- a/002-my-app/src/app/app.component.html
+++ b/002-my-app/src/app/app.component.html
@@ -1,8 +1,16 @@
-<h1>5 INF C . 2020/21</h1>
+<!--<h1>5 INF C . 2020/21</h1>
 <h3>Introduzione a Angular e TypeScript</h3>
 <p>Primo esempio di "DataBinding", io sono : {{myName}}</p>
 <button (click)="changeName()">CAMBIAMI NOME</button>
-<hr>
+<hr>-->
 
-<h3>Utiizzo dei componenti</h3>
-<app-servers></app-servers>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <h3>Utiizzo dei componenti</h3>
+            <app-servers></app-servers>
+            <!--<div app-servers></div>-->
+            <!--<div class="app-servers"></div>-->
+        </div>
+    </div>
+</div>
