--- a/002-my-app/src/app/app.component.html
+++ b/002-my-app/src/app/app.component.html
@@ -4,18 +4,18 @@
 <button (click)="changeName()">CAMBIAMI NOME</button>
 <hr>-->
 <div class="row">
-    <!--<div class="col-xs-12">
+    <div class="col-xs-12">
         <h3>Utiizzo dei componenti</h3>
         <app-servers></app-servers>
-        <<div app-servers></div>
+        <!--<div app-servers></div>
         <div class="app-servers"></div>
-    </div>
-</div>-->
-<div class="container">
+    </div>-->
+</div>
+<!--<div class="container">
     <div class="row">
         <div class="col-xs-12">
             <h3>Esercitzione: Practicing Databinding</h3>
             <app-practicing-databinding></app-practicing-databinding>
         </div>
-    </div>
+    </div>-->
 </div>
