--- a/002-my-app/src/app/server/server.component.html
+++ b/002-my-app/src/app/server/server.component.html
@@ -1,1 +1,1 @@
-<p>Server with id {{serverId}} is {{getServerStatus()}} </p>
+<p [ngStyle]="{backgroundColor:getColor()}">Server with id {{serverId}} is {{serverStatus}} </p>
