--- a/002-my-app/src/app/servers/servers.component.html
+++ b/002-my-app/src/app/servers/servers.component.html
@@ -11,7 +11,12 @@
     [(ngModel)]="serverName"
 >
 <button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()">Add Server</button>
-<p>{{serverCreationStatus}}</p>
+<!--<p>{{serverCreationStatus}}</p>-->
+<p *ngIf="serverCreated; else noServer">Server was created, server name is {{serverName}}</p>
+<!--<p *ngIf="!serverCreated">No server was created!</p>-->
+<ng-template #noServer>
+    <p>No server was created!</p>
+</ng-template>
 <hr>
 <app-server></app-server>
 <hr>
