--- a/002-my-app/src/app/server/server.component.html
+++ b/002-my-app/src/app/server/server.component.html
@@ -1,1 +1,5 @@
-<p [ngStyle]="{backgroundColor:getColor()}">Server with id {{serverId}} is {{serverStatus}} </p>
+<p 
+    [ngStyle]="{backgroundColor:getColor()}"
+    [ngClass]="{online: serverStatus==='online'}">
+    Server with id {{serverId}} is {{serverStatus}} 
+</p>
